SET(SRC_LIST dblayer.h dblayer.c)

INCLUDE_DIRECTORIES()
TARGET_LINK_LIBRARIES(main corelib)

ADD_LIBRARY(dblayer SHARED ${SRC_LIST})
SET_TARGET_PROPERTIES(dblayer PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(dblayer PROPERTIES VERSION 1.0 SOVERSION 1)

ADD_LIBRARY(dblayer_static STATIC ${SRC_LIST})
SET_TARGET_PROPERTIES(dblayer_static PROPERTIES OUTPUT_NAME "dblayer")
SET_TARGET_PROPERTIES(dblayer_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS dblayer dblayer_static 
  LIBRARY DESTINATION lib 
  ARCHIVE DESTINATION lib)

INSTALL(FILES dblayer.h DESTINATION include)
